--- a/WpfApp1/styles/SidebarStyles.xaml
+++ b/WpfApp1/styles/SidebarStyles.xaml
@@ -1,21 +1,32 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Ellipse x:Key="IconBackground" Width="30" Height="30" Fill="White"/>
-
     <Style x:Key="SidebarButtonStyle" TargetType="Button">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <StackPanel Orientation="Horizontal" Margin="5">
-                        <Border Width="30" Height="30" CornerRadius="10" Background="White" Opacity="0.15" HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <Image Source="{Binding Tag, RelativeSource={RelativeSource AncestorType=Button}}" Width="16" Height="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                        </Border>
-                        <TextBlock Text="{TemplateBinding Content}" FontSize="14" FontWeight="Light" Foreground="White" VerticalAlignment="Center" Margin="10,0,0,0"/>
+                        <!-- Container for the icon background and image -->
+                        <Grid Width="30" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <!-- Ellipse as background -->
+                            <Ellipse Width="30" Height="30" Fill="White" Opacity="0.15"/>
+
+                            <!-- Image displayed in front of the ellipse -->
+                            <Image Source="{Binding Tag, RelativeSource={RelativeSource AncestorType=Button}}" 
+                                   Width="16" Height="16" 
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+
+                        <!-- Text displayed beside the icon -->
+                        <TextBlock Text="{TemplateBinding Content}" 
+                                   FontSize="14" FontWeight="Light" Foreground="White" 
+                                   VerticalAlignment="Center" Margin="10,0,0,0"/>
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+
+        <!-- Other button styling -->
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="Padding" Value="10"/>
         <Setter Property="Background" Value="Transparent"/>
