--- a/WpfApp1/Component/Sidebar.xaml
+++ b/WpfApp1/Component/Sidebar.xaml
@@ -25,7 +25,7 @@
 
                     <StackPanel VerticalAlignment="Center">
                         <TextBlock Name="ProfileName" Text="Robert Fox" Foreground="White" FontWeight="Bold" Margin="0, 0, 0, 5"/>
-                        <TextBlock Text="View Profile" Foreground="White" FontSize="12"/>
+                        <Button Content="View Profile" Foreground="White" FontSize="12" Background="Transparent" BorderThickness="0" Click="ProfileClick"/>
                         <Border BorderBrush="White" BorderThickness="0,0,0,0.5" Width="Auto"/>
                     </StackPanel>
                 </StackPanel>
