--- a/WpfApp1/Community.xaml
+++ b/WpfApp1/Community.xaml
@@ -19,42 +19,7 @@
 
         <Grid Grid.Column="1" Margin="20">
             <StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
-                    <Border Background="White" Width="750" Height="50" CornerRadius="20" BorderBrush="#D6D6D6" BorderThickness="1" Padding="10">
-                        <Grid>
-                            <TextBox x:Name="SearchTextBox" 
-                             Width="700"
-                             Height="Auto"
-                             Background="Transparent"
-                             BorderThickness="0"
-                             Foreground="#A3A3A3"
-                             FontSize="14"
-                             Text="Search"
-                             VerticalAlignment="Center" 
-                         />
-                            <Image Source="/icon/search.png"
-                           Width="20"
-                           Height="20"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Center"
-                           Margin="0,0,10,0"
-                         />
-                        </Grid>
-                    </Border>
-
-                    <Button Width="135" Height="50" Background="#00029F" Foreground="White" FontSize="14" FontWeight="Bold" Margin="10,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Cursor="Hand" BorderThickness="0">
-                        <Button.Template>
-                            <ControlTemplate TargetType="Button">
-                                <Border Background="{TemplateBinding Background}" CornerRadius="20">
-                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                        <Image Source="/icon/filter.png" Width="16" Height="16" Margin="0,0,5,0"/>
-                                        <TextBlock Text="Filters" VerticalAlignment="Center"/>
-                                    </StackPanel>
-                                </Border>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
-                </StackPanel>
+                <Component:SearchBar />
 
                 <Border Background="White" Width="900" Padding="20" Margin="5,20,5,0" CornerRadius="15" BorderBrush="#D6E0EF" BorderThickness="3">
                     <StackPanel Background="#FFFFFF" Width="850">
