feat: improve UI for some page

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Welcome to PatchUP" Height="450" Width="800"
+        Title="Welcome to PatchUP" Height="780" Width="1200"
         ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen"
         >
     
     <Grid Background="#FFFFFF">
