--- a/WpfApp1/Component/Sidebar.xaml
+++ b/WpfApp1/Component/Sidebar.xaml
@@ -49,7 +49,12 @@
                 </StackPanel>
             </StackPanel>
 
-            <Button Style="{StaticResource SidebarButtonStyle}" Content="Logout" Tag="../icon/logout.png" DockPanel.Dock="Bottom" Margin="15, 0, 0, 0"/>
+            <Button Style="{StaticResource SidebarButtonStyle}" 
+                Content="Logout" 
+                Tag="../icon/logout.png" 
+                DockPanel.Dock="Bottom" 
+                Margin="15, 0, 0, 0" 
+                Click="LogoutClick"/>
         </DockPanel>
     </Border>
 </UserControl>
