--- a/WpfApp1/Register.xaml
+++ b/WpfApp1/Register.xaml
@@ -9,7 +9,8 @@
       Title="Register">
 
     <Grid Background="#FFFFFF">
-        <Button Content="Back to Login Page" 
+        <Button Content="Back to Login Page"
+                Cursor="Hand"
                 Width="200" 
                 Height="45" 
                 Margin="20"
@@ -59,11 +60,11 @@
                    HorizontalAlignment="Center"/>
                 <StackPanel Margin="0, 10, 0, 0" Width="400">
                     <TextBlock Text="Name" Margin="0,0,0,5" FontSize="16"/>
-                    <TextBox x:Name="NameTextBox" Height="32" Margin="0,0,0,5" TextChanged="UsernameTextBox_TextChanged" Width="400" FontSize="14" />
+                    <TextBox x:Name="NameTextBox" Height="32" Margin="0,0,0,5" TextChanged="UsernameTextBox_TextChanged" Width="400" FontSize="16" Padding="3" />
                     <TextBlock Text="Username" Margin="0,0,0,5" FontSize="16"/>
-                    <TextBox x:Name="UsernameTextBox" Height="32" Margin="0,0,0,5" TextChanged="UsernameTextBox_TextChanged" Width="400" FontSize="14" />
+                    <TextBox x:Name="UsernameTextBox" Height="32" Margin="0,0,0,5" TextChanged="UsernameTextBox_TextChanged" Width="400" FontSize="16" Padding="3" />
                     <TextBlock Text="E-mail" Margin="0,0,0,5" FontSize="16"/>
-                    <TextBox x:Name="EmailTextBox" Height="32" Margin="0,0,0,5" TextChanged="UsernameTextBox_TextChanged" Width="400" FontSize="14" />
+                    <TextBox x:Name="EmailTextBox" Height="32" Margin="0,0,0,5" TextChanged="UsernameTextBox_TextChanged" Width="400" FontSize="16" Padding="3" />
                     <StackPanel Margin="0,0,0,5">
                         <TextBlock Text="Password" Margin="0,0,0,5" FontSize="16"/>
                         <Grid>
@@ -71,6 +72,7 @@
                                  Width="400" 
                                  Height="32" 
                                  FontSize="16"
+                                 Padding="3"
                                  Background="#FFFFFF"
                                  VerticalAlignment="Center"
                                  Visibility="Visible"/>
@@ -78,6 +80,7 @@
                                  Width="400" 
                                  Height="32" 
                                  FontSize="16"
+                                 Padding="3"
                                  Background="#FFFFFF"
                                  VerticalAlignment="Center"
                                  Visibility="Collapsed"/>
@@ -86,6 +89,7 @@
                                  HorizontalAlignment="Right"
                                  VerticalAlignment="Center"
                                  Margin="0,0,5,0"
+                                 Cursor="Hand"
                                  Background="Transparent"
                                  BorderBrush="{x:Null}"
                                  Click="TogglePasswordVisibility_Click">
@@ -100,6 +104,7 @@
                                          Width="400" 
                                          Height="32" 
                                          FontSize="16"
+                                         Padding="3"
                                          Background="#FFFFFF"
                                          VerticalAlignment="Center"
                                          Visibility="Visible"/>
@@ -107,6 +112,7 @@
                                          Width="400" 
                                          Height="32" 
                                          FontSize="16"
+                                         Padding="3"
                                          VerticalAlignment="Center"
                                          Background="#FFFFFF"
                                          Visibility="Collapsed"/>
@@ -117,6 +123,7 @@
                                         Margin="0,0,5,0"
                                         Background="Transparent"
                                         BorderBrush="{x:Null}"
+                                        Cursor="Hand"
                                         Click="ToggleConfirmPasswordVisibility_Click">
                                 <TextBlock Text="👁️" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                             </Button>
@@ -125,13 +132,14 @@
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,10" >
-                    <CheckBox Content="I accept " Width="NaN" VerticalAlignment="Center" Checked="CheckBox_Checked" Name="agreeBox" FontSize="14"/>
+                    <CheckBox Content="I accept " Width="NaN" VerticalAlignment="Center" Checked="CheckBox_Checked" Name="agreeBox" FontSize="14" Cursor="Hand"/>
                     <Button Content="the Terms of the Agreement" FontSize="14" Background="Transparent" Foreground="Blue" BorderBrush="Transparent" Click="Terms_Click" />
                 </StackPanel>
 
                 <Button Content="Register" 
                         Width="350" 
                         Height="45"
+                        Cursor="Hand"
                         Background="#5469D4" 
                         Foreground="White"
                         FontWeight="Bold"
