Feat: add Tutorial Card and fetch tutorial content from DB

--- a/WpfApp1/Login.xaml
+++ b/WpfApp1/Login.xaml
@@ -7,7 +7,8 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Login"
-      ShowsNavigationUI="False">
+      ShowsNavigationUI="False"
+      >
 
     <Grid Background="#FFFFFF">
         <Image Source="img\BottomVector.png"
@@ -41,9 +42,9 @@
                        Margin="0,0,0,20"
                            HorizontalAlignment="Center"/>
                 <TextBlock Text="Username" Margin="0,0,0,5"></TextBlock>
-                <TextBox x:Name="UsernameTextBox" Width="250" Height="24" Margin="0, 0,0,10" TextChanged="UsernameTextBox_TextChanged" />
+                <TextBox x:Name="UsernameTextBox" Width="250" Height="24" Margin="0, 0,0,10" TextChanged="UsernameTextBox_TextChanged" KeyDown="UsernameTextBox_KeyDown"/>
                 <TextBlock Text="Password" Margin="0,0,0,5"></TextBlock>
-                <PasswordBox x:Name="PasswordTextBox" Width="250" Height="24" Margin="0, 0,0,15" />
+                <PasswordBox x:Name="PasswordTextBox" Width="250" Height="24" Margin="0, 0,0,15" KeyDown="PasswordTextBox_KeyDown"/>
 
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,15" >
                     <CheckBox Content="Remember Me" Width="120" VerticalAlignment="Center" Checked="Remember_Checked"/>
